fix ugly scrollbar on CSS

--- a/components/find-communities/css.module.scss
+++ b/components/find-communities/css.module.scss
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: center;
   padding: 1em 0;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: clip;
 
-  --width: min(80px, 6vw);
+  --width: min(80px, 5.5vw);
 }
 
 @media (min-width: 801px) and (max-width: 1024px) {
